# job-devide-server

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
migrations/2024-04-16-072347_create_users/: up.sql
src/: db.rs  lib.rs  main.rs  routes.rs  schema.rs
src/controller/: auth_controller.rs  llm_controller.rs  mod.rs  sample_controller.rs
src/error/: auth_error.rs
src/middleware/: auth_middleware.rs  mod.rs  sample_middleware.rs
src/middleware/service/: auth_middleware_service.rs  mod.rs
src/model/: user.rs
src/repository/: user_repository.rs
src/request/: login_request.rs  mod.rs  register_request.rs  update_user_request.rs
src/response/: mod.rs  register_response.rs  update_user_response.rs
src/usecase/: auth_usecase.rs  llm_usecase.rs  mod.rs
