[package]
name = "job-devide-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.7.1"
actix-rt = "2.9.0"
actix-service = "2.0.2"
actix-web = "4.5.1"
argon2 = "0.5.3"
chrono = { version = "0.4.37", features = ["serde"] }
diesel = { version = "2.1.5", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
jsonwebtoken = "9.3.0"
llm = "0.1.1"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
